--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+  <title>Search Data Visualisation</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-  <svg id="chart" width="2000" height="1000"></svg>
-
-
+<body>  
+  <svg class="chart" style="width:100%;height:1000px"></svg>  
+  
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="js/chart.js"></script>
 </body>
