--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>  
-  <svg class="chart" style="width:100%;height:1000px"></svg>  
-  
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
   <script src="js/chart.js"></script>
 </body>
 </html>
