working with d3 queue to load data

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>  
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>  
+  
   <script src="js/chart.js"></script>
 </body>
 </html>
